--- a/core/templates/base.html
+++ b/core/templates/base.html
@@ -45,7 +45,7 @@
                 <!-- LÍDER -->
                 {% if request.user|has_group:"LiderCuadrilla" %}
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Mis Cuadrillas</a>
+                        <a class="nav-link" href="{% url 'proyectos:panel' %}">Mis Cuadrillas</a>
                     </li>
                 {% endif %}
 
